# LLM

./: .gitignore
Project/: README.md  pyproject.toml
Project/.github/: copilot-instructions.md
Project/DOC/: rag_notes.md
Project/DevDoc/: architecture.md  installation.md  principles.md
Project/src/: __init__.py  agent_demo.py  app.py  llm_client.py  manual_test_agent.py  manual_test_rag.py  manual_test_web.py  prompting.py  rag_pipeline.py  web_automation_demo.py
